# UtakataClaudeCodePluginMarketPlace

./: .gitignore  CLAUDE.md  Dockerfile  README.md  jj-help.md  pyproject.toml
.agents/skills/jj-pr-reviewer/: SKILL.md
.claude/: settings.json  settings.local.json
.claude-plugin/: marketplace.json
.claude/skills/jj-vcs/: SKILL.md  revisions.md
.github/ISSUE_TEMPLATE/: feature_request.yml  plugin_feature.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: lint.yml
.serena/: project.yml
activitypub/.claude-plugin/: plugin.json
code-review/.claude-plugin/: plugin.json
jj-config/: config.toml  setup.sh
jj-evolution/.claude-plugin/: plugin.json
jj-evolution/skills/jj-evolution/: SKILL.md
mcp-only-subagents/.claude-plugin/: plugin.json
mcp-only-subagents/agents/: analyze-architecture-advisor.md  analyze-code-patterns.md  create-ui-components.md  format-language-standards.md  generate-documentation-writer.md  implement-pr-reviews.md  research-technology-analyst.md  scan-security-vulnerabilities.md  validate-quality-automation.md  validate-testing-strategy.md
moonrepo/.claude-plugin/: plugin.json
mysetup/: .mcp.json  README.md  setup.sh
mysetup/.claude-plugin/: plugin.json
mysetup/hooks/: hooks.json
mysetup/hooks/MyClaudeCodeHooks/: Cargo.toml  README.md  install.sh
mysetup/hooks/MyClaudeCodeHooks/src/: code_improve.rs  command_check.rs  hook_specific_output.rs  language_check.rs  logging.rs  mac_notification.rs  main.rs  user_prompt.rs
mysetup/hooks/claude-hooks/: Cargo.toml  README.md  build.rs  setup.sh
mysetup/hooks/claude-hooks/.github/workflows/: rust.yml
mysetup/hooks/claude-hooks/src/: main.rs  session_stats.rs
mysetup/hooks/claude-hooks/src/automation/: formatter.rs  linter.rs  mod.rs
mysetup/hooks/claude-hooks/src/handlers/: bash_handler.rs  file_handler.rs  mcp_handler.rs  mod.rs  prompt_handler.rs
mysetup/hooks/claude-hooks/src/models/: bash_command.rs  info_session.rs  mod.rs  prompt_evaluation.rs  rust_operation.rs  session_stats.rs
mysetup/hooks/claude-hooks/src/security/: command_validator.rs  mod.rs
mysetup/hooks/claude-hooks/src/utils/: cargo.rs  logging.rs  mod.rs  notification.rs
mysetup/skills/build-hooks/: SKILL.md
mysetup/skills/check-hook-logs/: SKILL.md
mysetup/skills/clean-build-hooks/: SKILL.md
plugins/dev-cost-tracker/: README.md
plugins/dev-cost-tracker/.claude-plugin/: plugin.json
plugins/dev-cost-tracker/hooks/: hooks.json
plugins/jj-vcs-workflow/.claude-plugin/: plugin.json
plugins/jj-vcs-workflow/hooks/: hooks.json
plugins/jj-vcs/.claude-plugin/: plugin.json
plugins/poml-assist/: README.md
plugins/poml-assist/.claude-plugin/: plugin.json
plugins/poml-assist/agents/: poml-architect.md  poml-reviewer.md
plugins/poml-assist/hooks/: hooks.json
plugins/zenn-review/: README.md
plugins/zenn-review/.claude-plugin/: plugin.json
plugins/zenn-review/agents/: zenn-reviewer.md
plugins/zenn-review/hooks/: hooks.json
protobuf/.claude-plugin/: plugin.json
rust/: .claude-rust.local.md.example  .gitignore  .mcp.json  README.md
rust/.claude-plugin/: plugin.json
rust/agents/: code-debugger.md  code-optimizer.md  code-reviewer.md  crate-advisor.md  error-fixer.md  workspace-architect.md
rust/commands/: add-crate.md  build.md  check.md  deps.md  fix.md  format.md  lint.md  macro.md  workspace.md
rust/hooks/: hooks.json
rust/hooks/scripts/: final-check.sh  hook-tools.py  post-edit.sh  prompt-check.py  requirements.txt
rust/skills/cargo-tools/: SKILL.md
rust/skills/crate-selection/: SKILL.md
scaffdog-colocation/.claude-plugin/: plugin.json
scaffdog-colocation/agents/: colocation-validator.md  scaffdog-template-generator.md
scaffdog-colocation/hooks/: hooks.json
scripts/: jj-ruff.sh  lint-check.sh
skilled-speckit/.claude-plugin/: plugin.json
tdd-enforce/.claude-plugin/: plugin.json
tdd-enforce/agents/: tdd-compliance-checker.md
tdd-enforce/hooks/: hooks.json
wasm-optimizer/.claude-plugin/: plugin.json
wasm-optimizer/agents/: wasm-audit-reporter.md  wasm-pattern-detector.md
wasm-optimizer/hooks/: hooks.json
(+78 files in other folders)
