[project]
name = "utakata-claude-plugins"
version = "1.0.0"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 88
include = ["**/*.py"]
exclude = [".git", ".jj", "__pycache__"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes（未使用import等）
    "I",    # isort（import順序）
    "B",    # flake8-bugbear
    "UP",   # pyupgrade（構文の近代化）
    "S",    # bandit（セキュリティ）
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # Ruff固有ルール
]
ignore = [
    "T201",   # print文（hookスクリプトは必須）
    "EM101",  # exception message literal
    "EM102",  # f-string in exception
    "TRY003", # long messages in raise
    "RUF002", # 日本語docstringの全角括弧（意図的）
    "RUF003", # 日本語コメントの全角括弧（意図的）
]

[tool.ruff.lint.per-file-ignores]
# S603/S607: cargo コマンドは信頼された固定パスから実行しており、入力検証済み
"plugins/rust/hooks/scripts/hook-tools.py" = ["S603", "S607"]
# S603: subprocess 呼び出しなし（ファイルの原子的書き込みに os.open を使用）
"plugins/session-saver/hooks/scripts/save-session-id.py" = ["S603"]
"plugins/wasm-optimizer/hooks/scripts/detect-heavy-patterns.py" = ["E501"]
"plugins/scaffdog-colocation/hooks/scripts/validate-colocation.py" = ["E501"]
"plugins/rust/hooks/scripts/prompt-check.py" = ["E501"]
# S603/S607: poml は信頼された固定コマンドから実行、file_path は拡張子・サイズ・パス検証済み
# E501: 日本語コメント・メッセージは行長制限を超える場合がある（意図的）
# RUF001: 日本語文字列内の全角括弧は意図的
"plugins/poml-assist/hooks/scripts/validate-poml.py" = ["S603", "S607", "E501", "RUF001"]
"plugins/poml-assist/hooks/scripts/render-poml.py" = ["S603", "S607", "E501", "RUF001"]
# S603: subprocess 呼び出しなし
"plugins/dev-cost-tracker/hooks/scripts/stop_reminder.py" = ["S603"]
# S101: テストファイルの assert は pytest の標準パターン
# S108: テストでの /tmp 使用は安全
"plugins/dev-cost-tracker/hooks/scripts/test_stop_reminder.py" = ["S101", "S108"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.isort]
known-first-party = []
