[package]
name = "MyClaudeCodeHooks"
version = "0.1.0"
edition = "2024"

[dependencies]
claude-code-hooks = { git = "https://github.com/UtakataKyosui/claude-code-hooks-lib", branch = "main", features = ["tokio", "clap", "chrono"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"

[target.'cfg(target_os = "macos")'.dependencies]
mac-notification-sys = "0.6"
