[package]
name = "production-hooks"
version = "0.1.0"
edition = "2024"
description = "Production Claude Code hooks for development workflow automation"

[dependencies]
# Claude Code hooks library with full MCP support
claude-code-hooks = { git = "https://github.com/UtakataKyosui/claude-code-hooks-lib", features = ["tokio", "clap", "chrono", "regex", "dirs"] }

# Additional utilities
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
anyhow = "1.0.100"

[target.'cfg(target_os = "macos")'.dependencies]
mac-notification-sys = "0.6"
