[package]
name = "integrated-claude-hooks"
version = "0.2.0"
edition = "2021"
description = "Integrated Claude Code hooks combining prompt evaluation, security validation, and multi-language automation"

[dependencies]
# Claude Code hooks library with full MCP support
claude-code-hooks = { git = "https://github.com/UtakataKyosui/claude-code-hooks-lib", features = ["tokio", "clap", "chrono", "regex", "dirs"] }

# Core utilities
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "fs", "io-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
anyhow = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
mac-notification-sys = "0.6"
